# vcproj2ninja

./: CLAUDE.md  Cargo.toml  PLAN.md  clippy.toml  generate_ninja_for_game.bat
crates/msvc2008-parser-bin/: Cargo.toml
crates/msvc2008-parser-bin/src/: main.rs
crates/msvc2008-parser-lib/: Cargo.toml
crates/msvc2008-parser-lib/src/: lib.rs  sln.rs  utils.rs  vcproj.rs
crates/msvc2008-parser-lib/src/vcproj/: mod.rs  tool_cl.rs  tool_lib.rs  tool_linker.rs
crates/msvc2008-parser-proc/: Cargo.toml
crates/msvc2008-parser-proc/src/: derive_parse_xml.rs  flag_enum.rs  lib.rs
crates/vcproj2ninja/: Cargo.toml
crates/vcproj2ninja/src/: cache.rs  compdb.rs  main.rs  ninja.rs  preprocess.rs  utils.rs
crates/vs2008-parser-lib/: Cargo.toml
crates/vs2008-parser-lib/src/: lib.rs  sln.rs  utils.rs
crates/vs2008-parser-lib/src/vcproj/: env.rs  flags.rs  macros.rs  mod.rs  tool_cl.rs  tool_lib.rs  tool_linker.rs  utils.rs
crates/vs2008-parser-proc/: Cargo.toml
crates/vs2008-parser-proc/src/: derive_parse_xml.rs  flag_enum.rs  lib.rs  utils.rs
resources/: game.vcproj  game2.vcproj
