[package]
name = "vcproj2ninja"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nom = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"
uuid = { workspace = true }

vs2008-parser-lib = { workspace = true }
